5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1721_3039.log
== TEST (2019-05-02 18:48:12) 
-- CODE:
from math import*
x=float(input("digite o valor em graus:"))
if((x>=-1)and(x<-1/2)or(x>1/2)and(x<=1)):
	z=radians(x)
	h=asin(z)
	print(h)
	
-- OUTPUT:
-0.01727961948848937
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:18) 
-- CODE:
from math import*
x=float(input("digite o valor em graus:"))
if((x>=-1)and(x<-1/2)or(x>1/2)and(x<=1)):
	z=radians(x)
	h=asin(z)
	print(h)
elif(x>=-1/2)and(x<=1/2)

-- ERROR:
File "XXXX", line 7
    elif(x>=-1/2)and(x<=1/2)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
